added profile pic and BG

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sajin S — Software Engineer & Business Analyst Aspirant</title>
+    <title>Sajin S — Software Engineer</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <header class="site-header">
         <div class="container header-inner">
-            <a class="logo" href="#hero">Sajin S</a>
+            <a class="logo" href="#hero"></a>
             <nav class="nav">
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
@@ -27,16 +27,26 @@
 
     <main>
         <section id="hero" class="hero">
-            <div class="container hero-inner">
-                <h1 class="hero-title">Sajin S</h1>
-                <p class="hero-sub">Java Full Stack Developer & Future Business Analyst</p>
-                <p class="hero-tag">"Building applications and turning data into insights."</p>
-                <div class="hero-actions">
-                    <a class="btn primary" href="#contact" id="contactBtn">Contact Me</a>
-                    <a class="btn outline" href="#projects">View Projects</a>
+            <div class="container hero-layout">
+
+                <div class="hero-image">
+                    <img src="assets/sajin.jpg" alt="Sajin S">
                 </div>
+
+                <div class="hero-text">
+                    <h1 class="hero-title">Sajin S</h1>
+                    <p class="hero-sub">Software Engineer</p>
+                    <p class="hero-tag">Where Imagination Meets Functionality.</p>
+
+                    <div class="hero-actions">
+                        <a class="btn primary" href="#contact" id="contactBtn">Contact Me</a>
+                        <a class="btn primary" href="#projects">View Projects</a>
+                    </div>
+                </div>
+
             </div>
         </section>
+
 
         <section id="about" class="about">
             <div class="container">
