--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <p class="lead about-lead reveal delay-1">
                     Software Engineer with professional experience developing and maintaining healthcare enterprise applications, including ERP and EHR systems. Skilled in full-stack development using modern front-end technologies, backend services, and relational databases,
                     with a strong focus on building responsive user interfaces and data-driven features. Experienced in reporting modules, dashboards, and data analysis to support clinical and operational workflows. Primary interests include UI/UX-focused
-                    application development and data analytics, with working knowledge of DevOps practices such as Git-based version control, CI/CD pipelines, and deployment automation. Adept at collaborating with cross-functional teams to enhance system
+                    application development and Data Analytics, with working knowledge of DevOps practices such as Git-based version control, CI/CD pipelines, and deployment automation. Adapt at collaborating with cross-functional teams to enhance system
                     usability, performance, and reliability in healthcare environments.
                 </p>
 
@@ -86,48 +86,112 @@
             <div class="container">
                 <h2 class="about-title reveal">Skills</h2>
                 <div class="skills-grid">
-                    <div class="skills-column">
-                        <h3>Development Skills</h3>
+                    <div class="skills-column ">
+                        <p class="hero-sub reveal delay-1">Development Skills</p>
+
                         <div class="card-grid">
-                            <div class="skill-card"><span class="skill-icon">☕</span>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/java.svg" class="skill-logo" alt="Java">
+                                </div>
                                 <div class="skill-name">Java</div>
+
                             </div>
-                            <div class="skill-card"><span class="skill-icon">⚛️</span>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/angular.svg" class="skill-logo" alt="Angular">
+                                </div>
                                 <div class="skill-name">Angular</div>
                             </div>
-                            <div class="skill-card"><span class="skill-icon">💠</span>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/html5.svg" class="skill-logo" alt="HTML">
+                                </div>
                                 <div class="skill-name">HTML</div>
                             </div>
-                            <div class="skill-card"><span class="skill-icon">🎨</span>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/css.svg" class="skill-logo" alt="CSS">
+                                </div>
                                 <div class="skill-name">CSS</div>
                             </div>
-                            <div class="skill-card"><span class="skill-icon">🗄️</span>
-                                <div class="skill-name">SQL</div>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/postgresql.svg" class="skill-logo" alt="SQL">
+                                </div>
+                                <div class="skill-name">PostgreSQL</div>
                             </div>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/cypress.svg" class="skill-logo" alt="Cypress">
+                                </div>
+                                <div class="skill-name">Cypress</div>
+                            </div>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/typescript.svg" class="skill-logo" alt="TypeScript">
+                                </div>
+                                <div class="skill-name">TypeScript</div>
+                            </div>
+
                         </div>
                     </div>
 
-                    <div class="skills-column">
-                        <h3>Analytics Skills</h3>
+
+
+                    <div class="skills-column ">
+                        <p class="hero-sub reveal delay-1">Analytical Skills</p>
+
                         <div class="card-grid">
-                            <div class="skill-card"><span class="skill-icon">📊</span>
-                                <div class="skill-name">Power BI <small class="muted">(Learning)</small></div>
+
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/power-bi.svg" class="skill-logo" alt="Power Bi">
+                                </div>
+                                <div class="skill-name">Power Bi</div>
                             </div>
-                            <div class="skill-card"><span class="skill-icon">🔎</span>
-                                <div class="skill-name">Data Analysis Basics</div>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/excel.svg" class="skill-logo" alt="Excel">
+                                </div>
+                                <div class="skill-name">Excel</div>
                             </div>
-                            <div class="skill-card"><span class="skill-icon">📈</span>
-                                <div class="skill-name">Reporting & Dashboards</div>
+
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/postgresql.svg" class="skill-logo" alt="SQL">
+                                </div>
+                                <div class="skill-name">PostgreSQL</div>
                             </div>
+
+
+
+
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+
+        <div class="section-divider">
+            <svg viewBox="0 0 1440 120" preserveAspectRatio="none">
+        <path d="M0,64L80,69.3C160,75,320,85,480,80C640,75,800,53,960,53.3C1120,53,1280,75,1360,85.3L1440,96V120H0Z"></path>
+    </svg>
+        </div>
+
         <section id="projects" class="projects">
             <div class="container">
-                <h2>Projects</h2>
+                <h2 class="about-title reveal">Work Experience</h2>
                 <div class="project-grid">
                     <article class="project-card">
                         <h3>Employee Management System (Full Stack)</h3>
