work experience section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
                     <div class="hero-actions reveal delay-3">
                         <a class="btn primary" href="#contact" id="contactBtn">Contact Me</a>
-                        <a class="btn primary" href="#projects">View Projects</a>
+                        <a class="btn outline" href="assets/Sajin_Resume.pdf" target="_blank" rel="noopener">
+    Download Resume
+</a>
+
                     </div>
                 </div>
 
@@ -141,6 +144,13 @@
                                 <div class="skill-name">TypeScript</div>
                             </div>
 
+                            <div class="skill-card">
+                                <div class="logo-box">
+                                    <img src="assets/icons/postman.svg" class="skill-logo" alt="Postman">
+                                </div>
+                                <div class="skill-name">Postman</div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -176,6 +186,8 @@
 
 
 
+
+
                         </div>
                     </div>
                 </div>
@@ -189,24 +201,66 @@
     </svg>
         </div>
 
-        <section id="projects" class="projects">
+        <section id="experience" class="experience">
             <div class="container">
-                <h2 class="about-title reveal">Work Experience</h2>
-                <div class="project-grid">
-                    <article class="project-card">
-                        <h3>Employee Management System (Full Stack)</h3>
-                        <p>Placeholder project showcasing CRUD, authentication, and role-based access for employee records.</p>
-                        <a class="btn small" href="#">View (placeholder)</a>
-                    </article>
+                <h2 class="about-title reveal">Professional Experience</h2>
 
-                    <article class="project-card">
-                        <h3>Sales Dashboard using Power BI</h3>
-                        <p>Placeholder project demonstrating interactive reports, filters, and visual insights using Power BI.</p>
-                        <a class="btn small" href="#">View (placeholder)</a>
-                    </article>
+
+                <div class="timeline-item reveal">
+
+                    <div class="timeline-content">
+                        <h3>Software Engineer</h3>
+                        <h4>Dwise Healthcare IT Solutions <span class="domain">(Healthcare Product Company)</span></h4>
+                        <span class="timeline-date">Aug 2024 – Present</span>
+
+                        <p>
+                            Working as a Java Full Stack Developer contributing to the development and maintenance of enterprise healthcare applications including Electronic Health Record (EHR) and Hospital ERP systems in a live production environment.
+                        </p>
+
+                        <h5 class="exp-subtitle">Blood Bank Management Module</h5>
+
+                        <ul class="exp-points">
+                            <li>Worked on EHR and Hospital ERP modules across the full software development lifecycle (analysis, development, testing, and maintenance).</li>
+
+                            <li>Developed and maintained the Blood Bank Management System used for handling donor records, blood inventory, and patient blood request workflows.</li>
+
+                            <li>Handled maintenance and feature enhancements, analyzing user requirements and implementing solutions across backend, frontend, and database layers.</li>
+
+                            <li>Collaborated with hospital staff, QA team to understand functional needs and convert them into technical implementations.</li>
+
+                            <li>Implemented and modified REST APIs using Java & Spring Boot and built UI forms and validation using Angular.</li>
+
+                            <li>Collaborated with QA and DevOps teams during testing and release cycles.</li>
+
+                            <li>Debugged and resolved production issues reported by users and ensured smooth system operation.</li>
+
+                            <li>Optimized PostgreSQL queries to improve performance and data retrieval efficiency.</li>
+
+                            <li>Participated in deployment validation and verified implemented changes matched user requirements.</li>
+                        </ul>
+
+
+                        <div class="tech-stack">
+                            <span>Java</span>
+                            <span>Spring Boot</span>
+                            <span>Angular</span>
+                            <span>PostgreSQL</span>
+                            <span>REST APIs</span>
+                            <span>Git</span>
+                            <span>Healthcare Domain</span>
+                        </div>
+
+                    </div>
                 </div>
+
             </div>
         </section>
+
+        <div class="section-divider flip">
+            <svg viewBox="0 0 1440 120" preserveAspectRatio="none">
+        <path d="M0,64L80,69.3C160,75,320,85,480,80C640,75,800,53,960,53.3C1120,53,1280,75,1360,85.3L1440,96V120H0Z"></path>
+        </svg>
+        </div>
 
         <section id="contact" class="contact">
             <div class="container">
