--- a/index.html
+++ b/index.html
@@ -433,8 +433,7 @@
                     <!-- SOCIAL LINKS -->
                     <div class="contact-social">
 
-                        <h3>Connect With Me</h3>
-
+                        <h3 class="contact-sub reveal delay-2">Connect With Me</h3>
                         <a class="social-card linkedin" href="https://www.linkedin.com/in/sajin-s-1a9a38213" target="_blank">
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
