--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container hero-layout">
 
                 <div class="hero-image">
-                    <img src="assets/sajin.jpg" alt="Sajin S">
+                    <img src="assets/CVphoto.png" alt="Sajin S">
                 </div>
 
                 <div class="hero-text">
