--- a/personal-portfolio/personal-portfolio/index.html
+++ b/personal-portfolio/personal-portfolio/index.html
@@ -35,7 +35,7 @@
             <div class="container hero-layout">
 
                 <div class="hero-image">
-                    <img src="assets/CVphoto.png" alt="Sajin S">
+                    <img src="assets/sajin.jpg" alt="Sajin S">
                 </div>
 
                 <div class="hero-text">
@@ -433,7 +433,8 @@
                     <!-- SOCIAL LINKS -->
                     <div class="contact-social">
 
-                        <h3 class="contact-sub reveal delay-2">Connect With Me</h3>
+                        <h3>Connect With Me</h3>
+
                         <a class="social-card linkedin" href="https://www.linkedin.com/in/sajin-s-1a9a38213" target="_blank">
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
