responsiveness nd forms pop up

--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2 class="about-title reveal">About Me</h2>
+                <h2 class="about-title reveal">Profile Summary</h2>
 
                 <p class="lead about-lead reveal delay-1">
-                    Software Engineer with professional experience developing and maintaining healthcare enterprise applications, including ERP and EHR systems. Skilled in full-stack development using modern front-end technologies, backend services, and relational databases,
-                    with a strong focus on building responsive user interfaces and data-driven features. Experienced in reporting modules, dashboards, and data analysis to support clinical and operational workflows. Primary interests include UI/UX-focused
-                    application development and Data Analytics, with working knowledge of DevOps practices such as Git-based version control, CI/CD pipelines, and deployment automation. Adapt at collaborating with cross-functional teams to enhance system
-                    usability, performance, and reliability in healthcare environments.
+                    Software Engineer with hands-on experience developing and maintaining healthcare enterprise applications, including ERP and EHR systems. Experienced in full-stack development using Java, Angular, and relational databases, with a focus on building user-centric
+                    interfaces, reporting modules, and data-driven features. Alongside development, actively involved in understanding functional requirements, analyzing workflows, debugging production issues, and coordinating with testers and users to
+                    validate system behavior. Comfortable interpreting business needs and translating them into technical solutions, documenting features, and supporting user acceptance testing (UAT). Currently expanding skills toward a Business Analyst
+                    role with interests in requirements gathering, stakeholder communication, process analysis, and data interpretation. Strong interest in bridging the gap between business teams and development teams to improve system usability, reporting
+                    accuracy, and operational efficiency in healthcare environments.
+
                 </p>
 
             </div>
@@ -245,6 +247,7 @@
                             <span>Spring Boot</span>
                             <span>Angular</span>
                             <span>PostgreSQL</span>
+                            <span>Cypress</span>
                             <span>REST APIs</span>
                             <span>Git</span>
                             <span>Healthcare Domain</span>
@@ -403,7 +406,7 @@
                 <div class="contact-wrapper">
 
                     <!-- CONTACT FORM -->
-                    <form class="contact-form" action="https://formspree.io/f/xpqjdyao" method="POST">
+                    <form id="contactForm" class="contact-form" method="POST">
 
                         <div class="input-group">
                             <input type="text" name="name" required>
